css/styles.css
/* css styles */

.navbar {
  height: auto; /* Makes the navbar adjust to its content size */
  font-family: "Montserrat";
}

.navbar > .container-fluid {
  margin: 0 auto;
  display: -webkit-flex;
  -webkit-flex-wrap: inherit;
  -webkit-align-items: center;
  -webkit-justify-content: space-between;
}

/* Adjust logo size */
.navbar-brand img {
  height: 100%; /* Makes the logo take the full height of the navbar */
  max-height: 50px;
}

/* making a gap between the logo and the title in the header */
.navbar .navbar-brand-logo {
  margin-right: 1em;
}
.ncanimate-products {
  justify-content: center
}

.navbar-brand-container {
  font-weight: 500;
}

.navbar-brand {
  font-size: 1.6rem;
  font-weight: 500;
}

.navbar-container {
  max-width: 1220px;
}

.me-auto {
  margin-left: auto !important; /* align menu items to the right */
  margin-right: 0 !important;
}

h1, h2, h3, h4, h5, h6 {
  font-family: "Montserrat";
  font-weight: 400;
}

h1 {
  font-weight: 500;
}

select, option {
  font-family: initial; /* ensures consistency between the selected and the options because the options can't be styled in firefox without a custom drop down */
}

/* Make the current menu item more obvious */
.navbar-nav .nav-link.active {
    font-weight: 500;
}

/* ----- footer ----- */
.nav-footer .nav-footer-center {
  display: none;
}

/* making the footer logos separated */
.nav-footer img {
  margin: 1em;
}

/* trying to make the navbar static
.headroom--pinned,
.headroom--unpinned,
.headroom--top,
.headroom--not-top {
  position: block !important;
} 
*/

/* make the video 100% width */
.video-container {
    width: 100%;
    text-align: center;
    display: block;
}
.video-container video {
    width: 100%;
}

